--- a/FitnessApp/Resources/layout/Exercise_ListView_DataTemplate.axml
+++ b/FitnessApp/Resources/layout/Exercise_ListView_DataTemplate.axml
@@ -17,7 +17,7 @@
     <ImageView
         android:src="@android:drawable/ic_menu_gallery"
         android:layout_width="match_parent"
-        android:layout_height="183.5dp"
+        android:layout_height="265.0dp"
         android:id="@+id/exerciseImage"
         android:layout_marginBottom="0.0dp"
         android:paddingBottom="7dp"
@@ -37,6 +37,14 @@
         android:id="@+id/exerciseReps"
         android:paddingLeft="10dp" />
     <TextView
+        android:text="Rest"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/exerciseRest"
+        android:visibility="gone"
+        android:paddingLeft="10dp" />
+    <TextView
         android:text="Superset"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
@@ -44,6 +52,5 @@
         android:id="@+id/exerciseSuperset"
         android:textAlignment="center"
         android:visibility="gone"
-        android:paddingLeft="10dp"
-        android:enabled="true" />
+        android:paddingLeft="10dp" />
 </LinearLayout>
